<resources>
    <string name="app_name">QuiziQ</string>
    <string name="start_button">Start</string>
    <string name="back_button">Back</string>
    <string name="send_button">Send</string>
    <string name="back_to_start_button">Restart</string>
    <string name="question_1">The founder of the Java programming language</string>
    <string name="answer_1_radio_button_1">Ryan Gosling</string>
    <string name="answer_1_radio_button_2">James Gosling</string>
    <string name="question_2">Year of foundation Google Android Inc.</string>
    <string name="answer_2_radio_button_1">2003</string>
    <string name="answer_2_radio_button_2">2007</string>
    <string name="question_3">2+2*2</string>
    <string name="answer_3_radio_button_1">8</string>
    <string name="answer_3_radio_button_2">6</string>
    <string name="result_title">Score:</string>
    <string name="birthday_button">Birthday</string>
    <string name="set_birthday_title">Set your birthday</string>
</resources>